# ai-debug-agent-rust

./: Cargo.toml  DOCKERFILE  README.md  docker-compose.yml  rustfmt.toml
scripts/: logs.sh  scale.sh  start.sh  stop.sh
src/: app.rs  app_state.rs  lib.rs  main.rs
src/config/: helper.rs
src/errors/: error.rs
src/handlers/: analyze.rs  mod.rs  result.rs  session.rs
src/models/: job.rs  log.rs  mod.rs  session.rs
src/queue/: job_queue.rs  mod.rs
src/services/: ai_service.rs
src/worker/: worker.rs
src/workers/: worker.rs
