[package]
name = "ai_debug_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.7", features = ["macros"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
redis = { version = "0.24", features = ["tokio-comp"] }
uuid = {version = "1.23.0", features = ["v4"] }